<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--
      POM PADRE (agregador). Aqui NO hay codigo: solo la version, las versiones de las dependencias y los
      plugins que comparten todos los modulos.

      Por que multi-modulo teniendo un solo servicio: el sitio donde viven el contrato OpenAPI y los clientes
      generados (Java, Python, stubs). Montarlo al generar cuesta un pom y un nivel de carpeta; hacerlo
      despues es un refactor que toca Dockerfile, compose, k8s, skaffold y CI a la vez.
    -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <relativePath/>
    </parent>

    <groupId>${groupId}</groupId>
    <artifactId>${artifactId}</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>${artifactId}</name>
    <description>descripcion ${artifactId}</description>

    <!--
      ⚠️ EL ORDEN IMPORTA, y va al reves de lo que parece.

      Aqui el contrato se genera DESDE EL CODIGO (code-first): escribes el controlador, springdoc deriva
      el OpenAPI de las anotaciones y un test lo compara con el fichero versionado. Por eso `app` va
      PRIMERO: es quien produce el contrato, no quien lo consume.

      (En contract-first seria al reves: se escribe el openapi.json a mano y de ahi se generan las
      interfaces del servidor. Se descarto porque el objetivo de este arquetipo es desarrollar rapido, y
      escribir Java y que el contrato caiga solo es el camino corto.)

      Maven ordena por dependencias y, a igualdad, por este orden de declaracion.
    -->
    <modules>
        <module>app</module>
        <module>contract</module>
        <!-- Generados desde el contrato: van despues, porque lo consumen. -->
        <module>client-java</module>
        <module>client-python</module>
    </modules>

    <properties>
        <!--
          Version de TODO el reactor. Se sobreescribe desde el build con -Drevision=X.Y.Z (CI la saca del
          tag de git). El valor de aqui es solo el defecto para builds locales.

          ⚠️ Este mismo valor esta repetido en .mvn/maven.config, y NO es redundante: para resolver el
          <parent> de un modulo hijo, Maven necesita la version ANTES de haber leido las propiedades del
          padre. Sin maven.config, `mvn -pl app ...` falla al no poder resolver ${revision}.
        -->
        <revision>0.0.0-SNAPSHOT</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>25</java.version>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>

        <spring-cloud.version>2025.1.0</spring-cloud.version>
        <springdoc-openapi.version>3.0.1</springdoc-openapi.version>
        <mapstruct.version>1.6.3</mapstruct.version>

        <!--
          Estas tres NO las gestiona el BOM de Spring Boot, asi que van fijadas a mano. El resto
          (micrometer y sus registros, por ejemplo) si las gestiona importando sus propios BOM: no les
          pongas version o acabaras con combinaciones que nadie ha probado.
        -->
        <archunit.version>1.5.0</archunit.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <logstash-logback-encoder.version>9.0</logstash-logback-encoder.version>
        <openapi-generator.version>7.25.0</openapi-generator.version>
        <swagger-annotations.version>2.2.30</swagger-annotations.version>
        <rewrite-maven-plugin.version>6.46.1</rewrite-maven-plugin.version>
        <rewrite-spring.version>6.37.1</rewrite-spring.version>

        <flatten-maven-plugin.version>1.8.0</flatten-maven-plugin.version>

        <maven.build.timestamp.format>yyyy_MM_dd_HH_mm_ss</maven.build.timestamp.format>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!--
              flatten-maven-plugin: OBLIGATORIO al usar ${revision}.

              Maven resuelve ${revision} mientras construye, pero el pom que se INSTALA o se PUBLICA
              conserva el literal `${revision}` y quien consuma el artefacto no puede resolverlo. flatten
              escribe un pom con la version ya resuelta y le dice a Maven que publique ESE.

              `resolveCiFriendliesOnly` = toca solo revision/sha1/changelist y deja el resto del pom igual.
              `updatePomFile` = usa el pom aplanado para este proyecto (sin esto se genera bien y se publica
              el original, que es el fallo silencioso clasico).
            -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    <updatePomFile>true</updatePomFile>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--
              OpenRewrite: migraciones AUTOMATICAS del codigo.

              No se ejecuta en el build (no hay <executions>): se lanza a mano cuando toca migrar.

                  ./mvnw rewrite:run       aplica las recetas activas
                  ./mvnw rewrite:dryRun    enseña que cambiaria, sin tocar nada

              Para que sirve de verdad: subir de version mayor de Spring Boot son cientos de cambios
              mecanicos (paquetes movidos, APIs renombradas, `javax` -> `jakarta`). Hacerlos a mano en
              cada servicio es donde se pierden las tardes y donde se cuelan los despistes. Aqui se
              cambia la receta y se ejecuta.

              Las recetas activas de abajo son las seguras: limpieza de codigo muerto y modernizacion de
              tests. Las de migracion de version se activan cuando toque, cambiando `activeRecipes`.
            -->
            <plugin>
                <groupId>org.openrewrite.maven</groupId>
                <artifactId>rewrite-maven-plugin</artifactId>
                <version>${rewrite-maven-plugin.version}</version>
                <configuration>
                    <activeRecipes>
                        <recipe>org.openrewrite.java.testing.junit5.JUnit5BestPractices</recipe>
                        <recipe>org.openrewrite.staticanalysis.CommonStaticAnalysis</recipe>
                    </activeRecipes>
                    <!--
                      ⚠️ El codigo generado NO se toca: se reescribiria y en el siguiente build volveria
                      a salir igual, asi que el cambio se pierde y el diff miente.
                    -->
                    <exclusions>
                        <exclusion>**/target/**</exclusion>
                    </exclusions>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.openrewrite.recipe</groupId>
                        <artifactId>rewrite-spring</artifactId>
                        <version>${rewrite-spring.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

</project>
